Fix subheader z-index

--- a/scenes/Discover/scenes/Subheader/Subheader.module.css
+++ b/scenes/Discover/scenes/Subheader/Subheader.module.css
@@ -10,7 +10,6 @@
 .imageContainer {
   width: 100%;
   max-width: 300px;
-  z-index: -1;
 }
 
 .textContainer {
@@ -23,6 +22,7 @@
   left: -150px;
   top: -120px;
   width: 594px;
+  z-index: -1;
 }
 
 .yellowBlob {
@@ -30,6 +30,7 @@
   left: 0px;
   top: -20px;
   width: 700px;
+  z-index: -1;
 }
 
 
